--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ asyncio>=3.4.3
 beautifulsoup4>=4.12.3
 cloudscraper>=1.2.69
 daxxhub>=1.0.0
-deepai>=1.1.0
+deepai==1.0.1
 dnspython>=2.4.2
 emojis>=0.7.0
 Faker>=25.2.0
