--- a/sample.env
+++ b/sample.env
@@ -1,60 +1,62 @@
 # Telegram API Credentials
-API_ID=
-API_HASH=
-BOT_TOKEN=
-OWNER_ID=
-
-# Bot Configuration
-OWNER_USERNAME=
-BOT_USERNAME=
-BOT_NAME=
-ASSUSERNAME=
-LOGGER_ID=
-BOT_LOGS_CHANNEL=
-
-# Music API Configuration
-API_URL=
-API_KEY=
-API_BASE_URL=
-
-# MongoDB
-MONGO_DB_URI=
-
-# Duration Limits
-DURATION_LIMIT=
-SONG_DOWNLOAD_DURATION=
-SONG_DOWNLOAD_DURATION_LIMIT=
-
-# Auto-leave Settings
-AUTO_LEAVING_ASSISTANT=
-ASSISTANT_LEAVE_TIME=
-
-# Spotify Configuration
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
-
-# Railway Configuration
-RAILWAY_URL=
+API_ID=your_api_id_here
+API_HASH=your_api_hash_here
+BOT_TOKEN=your_bot_token_here
+OWNER_ID=your_owner_id_here
 
 # String Sessions (for assistant accounts)
-STRING_SESSION=
-STRING_SESSION2=
-STRING_SESSION3=
-STRING_SESSION4=
-STRING_SESSION5=
-STRING_SESSION6=
-STRING_SESSION7=
+STRING_SESSION=your_string_session_1
+STRING_SESSION2=your_string_session_2
+STRING_SESSION3=your_string_session_3
+STRING_SESSION4=your_string_session_4
+STRING_SESSION5=your_string_session_5
 
-# GitHub Configuration
-GIT_TOKEN=
+# MongoDB Configuration
+MONGO_DB_URI=your_mongodb_uri_here
+
+# Bot Configuration
+OWNER_USERNAME=your_username
+BOT_USERNAME=your_bot_username
+BOT_NAME=your_bot_name
+ASSUSERNAME=your_assistant_username
+LOGGER_ID=-1001234567890
+BOT_LOGS_CHANNEL=-1001234567890
+
+# Railway Configuration
+RAILWAY_URL=https://your-app-name.up.railway.app
+PORT=8000
+
+# Music API Configuration
+API_URL=http://deadlinetech.site
+API_KEY=your_api_key_here
+
+# Spotify Configuration
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+
+# Duration Limits
+DURATION_LIMIT=99999
+SONG_DOWNLOAD_DURATION=99999
+SONG_DOWNLOAD_DURATION_LIMIT=99999
+
+# Auto-leave Configuration
+AUTO_LEAVING_ASSISTANT=True
+ASSISTANT_LEAVE_TIME=9000
+
+# File Size Limits
+TG_AUDIO_FILESIZE_LIMIT=5242880000
+TG_VIDEO_FILESIZE_LIMIT=5242880000
+
+# Playlist Configuration
+PLAYLIST_FETCH_LIMIT=9999
+
+# GitHub Configuration (for updates)
+UPSTREAM_REPO=https://github.com/devforgekush/Alphabot
+UPSTREAM_BRANCH=main
+GIT_TOKEN=your_git_token_here
 
 # Support Links
-SUPPORT_CHANNEL=
-SUPPORT_CHAT=
-SOURCE_CODE=
-PRIVACY_LINK=
-
-# Playlist and File Limits
-PLAYLIST_FETCH_LIMIT=
-TG_AUDIO_FILESIZE_LIMIT=
-TG_VIDEO_FILESIZE_LIMIT=
+SUPPORT_CHANNEL=https://t.me/devforgekush
+SUPPORT_CHAT=https://t.me/devforgekush
+SOURCE_CODE=https://github.com/devforgekush/Alphabot
+PRIVACY_LINK=https://telegra.ph/Privacy-Policy-for-Alphabot-Music--Management-08-02-2
