Push all remaining changes

--- a/Dockerfile.minimal
+++ b/Dockerfile.minimal
@@ -7,16 +7,11 @@ RUN apt-get update && \
         && apt-get clean \
         && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
 WORKDIR /app
 
-# Copy and install requirements (try alternative if main fails)
+# Copy and install requirements
 COPY requirements-simple.txt .
-COPY requirements-alternative.txt .
-
-# Try to install requirements, fallback to alternative if needed
-RUN pip3 install --no-cache-dir -r requirements-simple.txt || \
-    pip3 install --no-cache-dir -r requirements-alternative.txt
+RUN pip3 install --no-cache-dir -r requirements-simple.txt
 
 # Copy app
 COPY . .
@@ -24,8 +19,6 @@ COPY . .
 # Create downloads directory
 RUN mkdir -p downloads
 
-# Expose port
 EXPOSE 8000
 
-# Start the application
 CMD ["bash", "start"]
