Fix dependency conflicts: use compatible pytgcalls/tgcalls versions with smart fallback

--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -1,6 +1,4 @@
-# Minimal requirements for Railway deployment
-pytgcalls==2.1.0
-tgcalls==2.0.0
+# Basic requirements without pytgcalls for testing
 pyrogram==2.0.106
 tgcrypto==1.2.5
 python-dotenv==1.0.1
