--- a/requirements-working.txt
+++ b/requirements-working.txt
@@ -1,5 +1,6 @@
 # Working requirements for Railway deployment
-pytgcalls>=2.0.0
+pytgcalls==2.1.0
+tgcalls==2.0.0
 pyrogram==2.0.106
 tgcrypto==1.2.5
 python-dotenv==1.0.1
