--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies with fixed versions to avoid conflicts
 pytgcalls==2.1.0
-tgcalls==3.0.0.dev6
+tgcalls==2.0.0
 aiofiles==23.2.1
 aiohttp==3.9.5
 apscheduler==3.10.4
