--- a/requirements-simple.txt
+++ b/requirements-simple.txt
@@ -15,3 +15,7 @@ yt-dlp==2025.6.25
 gtts==2.4.0
 pydub==0.25.1
 gitpython==3.1.42
+heroku3==5.2.0
+youtubesearchpython==1.6.6
+beautifulsoup4==4.12.0
+spotipy==2.23.0
