--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -14,6 +14,6 @@ gtts==2.4.0
 pydub==0.25.1
 gitpython==3.1.42
 heroku3==5.2.0
-youtubesearchpython==1.6.6
+youtube-search-python==1.6.6
 beautifulsoup4==4.12.0
 spotipy==2.23.0
