--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -2,7 +2,8 @@
 pyrogram==2.0.106
 tgcrypto==1.2.5
 python-dotenv==1.0.1
-motor==3.3.2
+motor==3.1.2
+pymongo==3.12.3
 aiofiles==23.2.1
 aiohttp==3.9.5
 requests==2.32.3
