--- a/requirements-flexible.txt
+++ b/requirements-flexible.txt
@@ -4,7 +4,8 @@ tgcalls>=2.0.0
 pyrogram>=2.0.0
 tgcrypto>=1.2.0
 python-dotenv>=1.0.0
-motor>=3.0.0
+motor==3.1.2
+pymongo==3.12.3
 aiofiles>=23.0.0
 aiohttp>=3.9.0
 requests>=2.30.0
