--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ aiohttp==3.9.5
 apscheduler==3.10.4
 asyncio==3.4.3
 beautifulsoup4==4.12.0
-daxxhub==1.0.0
+# daxxhub 1.0.0 not available on PyPI; pin to a released version
+daxxhub==1.2
 deepai==1.0.1
 dnspython==2.4.2
 emojis==0.7.0
