--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ pytgcalls==2.1.0
 aiofiles==23.2.1
 aiohttp==3.9.5
 apscheduler==3.10.4
-asyncio==3.4.3
+# asyncio is part of the stdlib for supported Python versions — do not install via pip
+# asyncio==3.4.3
 beautifulsoup4==4.12.0
 # daxxhub 1.0.0 not available on PyPI; pin to a released version
 daxxhub==1.2
@@ -17,7 +18,6 @@ emojis==0.7.0
 Faker==25.2.0
 ffmpeg-python==0.2.0
 future==0.18.3
-gitpython==3.1.43
 gpytranslate==1.2.2
 gtts==2.4.0
 hachoir==3.1.3
@@ -64,7 +64,8 @@ yt-dlp==2025.6.25
 # git+https://github.com/pytgcalls/pytgcalls.git@v1.2.4
 # git+https://github.com/AsmSafone/SafoneAPI.git
 
+imageio-ffmpeg
+
 # Additional dependencies for Railway deployment
-gitpython==3.1.43
 motor==3.1.2
 pymongo==4.3.3
