--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # Core dependencies with fixed versions to avoid conflicts
-# pytgcalls provides voice support. We avoid pinning `tgcalls` strictly because
-# versions on PyPI may vary; let pip resolve a compatible backend or install
-# a specific tgcalls version only if needed.
-pytgcalls==2.1.0
-# tgcalls==2.0.0  # removed strict pin — not available on PyPI (caused build errors)
+# pytgcalls provides voice support. Installing from the upstream GitHub tag
+# is more reliable here because the PyPI release may depend on a tgcalls
+# version not present on PyPI. This will instruct pip to clone the repo tag.
+git+https://github.com/pytgcalls/pytgcalls.git@v1.2.4
 aiofiles==23.2.1
 aiohttp==3.9.5
 apscheduler==3.10.4
