--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # pytgcalls provides voice support. Installing from the upstream GitHub tag
 # is more reliable here because the PyPI release may depend on a tgcalls
 # version not present on PyPI. This will instruct pip to clone the repo tag.
-git+https://github.com/pytgcalls/pytgcalls.git@v1.2.4
+git+https://github.com/pytgcalls/pytgcalls.git@main
 aiofiles==23.2.1
 aiohttp==3.9.5
 apscheduler==3.10.4
