config: add PING_* defaults to config.py and sample.env

--- a/sample.env
+++ b/sample.env
@@ -60,3 +60,13 @@ SUPPORT_CHANNEL=https://t.me/devforgekush
 SUPPORT_CHAT=https://t.me/devforgekush
 SOURCE_CODE=https://github.com/devforgekush/Alphabot
 PRIVACY_LINK=https://telegra.ph/Privacy-Policy-for-Alphabot-Music--Management-08-02-2
+
+# Pinger configuration
+# Seconds between pings (default 720 = 12 minutes)
+PING_INTERVAL=720
+# Timeout for each ping request (seconds)
+PING_TIMEOUT=10
+# Number of retries for transient errors (502/503/504)
+PING_RETRIES=3
+# Backoff between retry attempts (seconds)
+PING_RETRY_BACKOFF=2
