userbot: remove auto-join support groups; doc config

--- a/sample.env
+++ b/sample.env
@@ -70,3 +70,7 @@ PING_TIMEOUT=10
 PING_RETRIES=3
 # Backoff between retry attempts (seconds)
 PING_RETRY_BACKOFF=2
+
+# Whether assistant accounts should auto-join support channels on startup (True/False)
+# Default is False to avoid unwanted auto-joins
+AUTO_JOIN_SUPPORT=False
