--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ gpytranslate==1.5.1
 gtts==2.4.0
 hachoir==3.1.3
 heroku3==5.2.0
-httpx==0.23.3
+httpx~=0.25.2
 instaloader==4.9
 img2pdf==0.4.4
 lexica-api==1.5.1
