--- a/requirements-voice.txt
+++ b/requirements-voice.txt
@@ -2,4 +2,5 @@
 # These packages require build tools and native dependencies in some cases.
 ntgcalls==2.0.5
 pytgcalls==2.1.0
-tgcalls==2.0.0
+# pin tgcalls to an available build; pip shows only 3.0.0.dev6
+tgcalls==3.0.0.dev6
